--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,25 @@
-# Ignore node modules
-node_modules/
-
-# Ignore build outputs
-dist/
-build/
-.next/
-out/
-
-# Ignore environment variables
-.env
-.env.local
-.env.production
-.env.development
-
-# Ignore OS files
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# Ignore IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Ignore logs
+# Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Ignore temporary files
-*.tmp
-*.temp
-.cache/
+node_modules
+dist
+dist-ssr
+*.local
+.env
 
-# Ignore Vercel
-.vercel
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
