--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,23 @@
 {
-  "name": "Análisis de Pedidos",
-  "short_name": "Pedidos",
-  "description": "Aplicación para capturar y analizar pedidos mediante fotografías con IA",
-  "start_url": "/index.html",
+  "name": "Escáner Industrial Pro",
+  "short_name": "IndustrialScan",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f1419",
-  "theme_color": "#3b82f6",
+  "background_color": "#0f172a",
+  "theme_color": "#0f172a",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/icon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "/icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
-    }
-  ],
-  "categories": ["business", "productivity"],
-  "screenshots": [
-    {
-      "src": "screenshot1.png",
-      "sizes": "540x720",
-      "type": "image/png"
     }
   ]
 }
